--- a/src/components/LandingPage/whoWeAre.css
+++ b/src/components/LandingPage/whoWeAre.css
@@ -90,13 +90,12 @@
 
 .dog{
 	position: absolute;
-	/*width: 72vw;*/
 }
 
 .wframe{
-	margin-top: -10px;
-    width: 80vw;
-	margin-left: 2vw;
-	z-index: 0;
+	margin-top: -31px;
+    /*width: 77vw;*/
+	margin-left: 5vw;
+	z-index: -1;
 
 }
